# kpopmvlyrics

./: .gitignore  README.md  index.html  package-lock.json  package.json  requirements-asr.txt  vite.config.ts
apps/kde-qt/: Cargo.toml  README.md  build.rs
apps/kde-qt/qml/: Main.qml
apps/kde-qt/src/: backend.rs  main.rs
apps/macos/: .gitignore  Info.plist  README.md  project.yml
apps/macos/Scripts/: build-rust.sh
apps/macos/Sources/Kpml/: AppState.swift  CoreClient.swift  Helpers.swift  KpmlApp.swift  Models.swift  PlayerObserver.swift  VideoSurfaceView.swift
apps/macos/Sources/Kpml/Views/: AlignmentEditorView.swift  ContentView.swift  LyricStageView.swift  MemberStripView.swift
apps/windows-winui/: Cargo.toml  README.md
apps/windows-winui/src/: app.rs  main.rs
packaging/linux/: asr-dependencies.md  com.kpopmvlyrics.desktop.desktop  com.kpopmvlyrics.desktop.metainfo.xml
scripts/: package-appimage.sh  package-flatpak.sh  package-tar.sh  run_qwen_asr.py  setup-asr.sh  setup-whisper.sh  whisper_transcribe.py
src/: App.test.tsx  App.tsx  styles.css  tauri.ts  types.ts  useYouTubePlayer.ts  youtube.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: uniffi-bindgen.rs
src-tauri/icons/: icon.icns
src-tauri/src/: align.rs  app.rs  asr.rs  audio_visual.rs  captions.rs  command.rs  db.rs  export.rs  ffi.rs  lib.rs  log.rs  lyrics.rs  main.rs  media_server.rs  members.rs  models.rs  process_util.rs  tauri_app.rs  video.rs  whisper.rs
src-tauri/src/player/: events.rs  hw_decode.rs  linux_native.rs  macos.rs  mod.rs  native_player.rs  pipeline.rs  windows.rs
src-tauri/src/ui/: mod.rs
src-tauri/src/ui/linux/: editor.rs  lyrics.rs  metadata.rs  mod.rs  stage.css  timeline.rs  video_overlay.rs
