[package]
name = "kpopmvlyrics"
version = "0.1.0"
description = "K-Pop MV lyric sync desktop app"
authors = ["K-Pop MV Lyrics contributors"]
edition = "2021"

[lib]
name = "kpopmvlyrics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
dirs = "6"
ego-tree = "0.10"
html-escape = "0.2"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.37", features = ["bundled"] }
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
tauri = { version = "2", features = ["unstable", "protocol-asset"] }
tauri-plugin-dialog = "2"
url = "2"

[dev-dependencies]
tempfile = "3"
