[package]
name = "kpopmvlyrics"
version = "0.1.0"
description = "K-Pop MV lyric sync desktop app"
authors = ["K-Pop MV Lyrics contributors"]
edition = "2021"

[lib]
name = "kpopmvlyrics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kpopmvlyrics"
path = "src/main.rs"

[[example]]
name = "uniffi-bindgen"
required-features = ["macos_ffi"]

[features]
# Reusable native player + public `frontend` API for the non-GTK Rust frontends
# (Qt/QML via cxx-qt, WinUI 3 via windows-rs). Enabled by those crates.
native_player = []
# Generated FFI surface consumed by the native macOS (SwiftUI) app via UniFFI.
macos_ffi = ["native_player", "dep:uniffi"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
dirs = "6"
ego-tree = "0.10"
html-escape = "0.2"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.37", features = ["bundled"] }
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
rayon = "1.10"
url = "2"
gstreamer = "0.25"
gstreamer-app = "0.25"
gstreamer-video = "0.25"
spectrs = { version = "0.2.1", default-features = false }
uniffi = { version = "0.28", optional = true, features = ["cli"] }

# GTK/gstreamer native desktop path: Linux and the BSDs.
[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
gtk = { package = "gtk4", version = "0.11", features = ["gnome_46"] }
glib = "0.22"
gdk-pixbuf = "0.22"

# Legacy Tauri webview shell: Windows and macOS (until each gains a native UI).
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tauri = { version = "2", features = ["unstable", "protocol-asset"] }
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"
