[package]
name = "kpml-kde-qt"
version = "0.1.0"
edition = "2021"
description = "K-Pop MV Lyrics — KDE Plasma / Qt-QML frontend"

[[bin]]
name = "kpml-kde"
path = "src/main.rs"

[dependencies]
cxx = "1"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_gui", "qt_qml"] }
serde_json = "1"
# Shared Rust core (AppContext + NativePlayer + JSON command surface).
kpopmvlyrics = { path = "../../src-tauri", features = ["native_player"] }

[build-dependencies]
cxx-qt-build = "0.7"
