[package]
name = "kpml-windows"
version = "0.1.0"
edition = "2021"
description = "K-Pop MV Lyrics — Windows (WinUI 3 / windows-rs) frontend"

[[bin]]
name = "kpml-windows"
path = "src/main.rs"

[dependencies]
serde_json = "1"
# Shared Rust core (AppContext + NativePlayer + JSON command surface).
kpopmvlyrics = { path = "../../src-tauri", features = ["native_player"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
